# rust-protobuf-macros

./: Cargo.toml  README.md
sample/: Cargo.toml  addressbook.proto  addressbook.rs  main.rs
src/: lib.rs  parser.rs  protobuf_bind.rs  protobuf_init.rs  util.rs
