[package]
name = "protobuf_macros"
version = "0.6.0"
authors = ["Paul Liétar <paul@lietar.net>"]

[lib]
name = "protobuf_macros"
path = "src/lib.rs"
plugin = true
test = false
crate-type = ["dylib", "rlib"]

[dependencies]
aster = "0.39.0"
syntex = { version = "0.55.0", optional = true }
syntex_syntax = { version = "0.55.0", optional = true }

[features]
with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]
